sample/retrieveUnpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ECO Backlog</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Connected</fullName>
        </values>
        <values>
            <fullName>Customer appointment</fullName>
        </values>
        <values>
            <fullName>Eligible</fullName>
        </values>
        <values>
            <fullName>Ineligible</fullName>
        </values>
        <values>
            <fullName>Inquired</fullName>
        </values>
        <values>
            <fullName>Maybe-Eligible</fullName>
        </values>
        <values>
            <fullName>Not connecting</fullName>
        </values>
        <values>
            <fullName>Paid ECO fee</fullName>
        </values>
        <values>
            <fullName>Provided ECO price</fullName>
        </values>
        <values>
            <fullName>Returned signed Remittance</fullName>
        </values>
        <values>
            <fullName>Sent Notice of Agreement</fullName>
        </values>
        <values>
            <fullName>Submitted app form %2F paid app fee</fullName>
        </values>
        <values>
            <fullName>Want to connect-forwarded to Proprty Dev</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IOTA Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>In Negotiation</fullName>
        </values>
        <values>
            <fullName>Opportunity Engaged</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Solution Proposed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IOTA Sales Process - Small</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acceptable_ECO_price__c</fullName>
        <inlineHelpText>The price the customer would be willing to pay to connect early</inlineHelpText>
        <label>Acceptable ECO price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creation_Method__c</fullName>
        <label>Creation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_declined_reason__c</fullName>
        <label>Customer declined reason</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have treatment plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy with septic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer&apos;s age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t want to connect early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ECO_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The zone which this opportunity belongs to</description>
        <label>ECO Region</label>
        <referenceTo>ECO_Region__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>Legacy Id of the opportunity record migration for IOTA</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Opportunity Number - introduced to meet IOTA requirements</description>
        <displayFormat>Opp-{000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <description>The main product the relates to the opportunity. Used for IOTA opportunities.</description>
        <label>Opportunity Product</label>
        <picklist>
            <picklistValues>
                <fullName>Tank Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneBox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlokAid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NuRON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LoneWorker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EasyLift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SafeLift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greener Government Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HydroTrak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property__r.Address_Also_Known_As__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <description>The long description of why an opportunity was lost</description>
        <label>Reason Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Captures the reason why an opportunity was lost</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Supply Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ECO_Region__c</columns>
        <columns>Property__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Inquired_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ECO_Region__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Inquired</value>
        </filters>
        <label>ECO - Inquired Opportunities</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Executives</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Mercantile_Agency</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Queue_User</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>eco</value>
        </filters>
        <label>Queue - User</label>
        <sharedTo>
            <group>ECO_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>ECO_Backlog</fullName>
        <active>true</active>
        <businessProcess>ECO Backlog</businessProcess>
        <label>ECO Backlog</label>
    </recordTypes>
    <recordTypes>
        <fullName>IOTA_Opportunity</fullName>
        <active>true</active>
        <businessProcess>IOTA Sales Process</businessProcess>
        <description>Opportunity type for a medium sized opportunity</description>
        <label>IOTA Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>IOTA_Opportunity_Small</fullName>
        <active>false</active>
        <businessProcess>IOTA Sales Process - Small</businessProcess>
        <description>Record type for a small sized iota opportunity</description>
        <label>IOTA Opportunity - Small</label>
    </recordTypes>
    <validationRules>
        <fullName>Acceptable_price_validation</fullName>
        <active>true</active>
        <description>Acceptable price is only allowed if the Declined reason is too expensive</description>
        <errorConditionFormula>NOT ( ISPICKVAL( Customer_declined_reason__c , &apos;Price&apos;) ) &amp;&amp; NOT (ISBLANK (  Acceptable_ECO_price__c ) || ISNULL( Acceptable_ECO_price__c ) )</errorConditionFormula>
        <errorDisplayField>Acceptable_ECO_price__c</errorDisplayField>
        <errorMessage>Acceptable ECO price can only be entered if the Customer declined reason has been set to Too expensive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dec_reason_Accept_Price_entered</fullName>
        <active>true</active>
        <description>If declined reason or acceptable price are entered but the stage is not set to Customer declined</description>
        <errorConditionFormula>NOT (ISPICKVAL ( StageName, &apos;Not connecting&apos;) ) &amp;&amp; 
(
	NOT(ISBLANK (TEXT( Customer_declined_reason__c )) || ISNULL (TEXT( Customer_declined_reason__c ))) || 
	NOT(ISBLANK ( Acceptable_ECO_price__c ) || ISNULL ( Acceptable_ECO_price__c ))
)</errorConditionFormula>
        <errorMessage>The Customer decline reason and Acceptable ECO price fields can only be entered if the Stage is Customer declined.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Declined_reason_mandatory</fullName>
        <active>true</active>
        <description>Declined reason and acceptable price</description>
        <errorConditionFormula>ISPICKVAL(StageName,&apos;Not connecting&apos;) &amp;&amp; (ISBLANK( TEXT(Customer_declined_reason__c) ) || ISNULL(TEXT(Customer_declined_reason__c)))</errorConditionFormula>
        <errorDisplayField>Customer_declined_reason__c</errorDisplayField>
        <errorMessage>The Customer declined reason must be entered if the Stage has been set to Customer declined.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_req_when_Other_Reason_chosen</fullName>
        <active>true</active>
        <description>For IOTA opportunities, the reason description is mandatory when a value of &apos;Other&apos; is chosen</description>
        <errorConditionFormula>AND(
   ($RecordType.Name = &apos;IOTA Opportunity&apos;),
   ( 
      ISPICKVAL(Reason__c,&quot;Other&quot;) &amp;&amp;
      ISBLANK(Reason_Description__c)
   )
)</errorConditionFormula>
        <errorMessage>A reason description must be entered when a Reason of &apos;Other&apos; is chosen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_required_for_Closed_Lost_IOTA_opp</fullName>
        <active>true</active>
        <description>For IOTA opportunities, the reason field is mandatory when an opportunity is marked as Closed Lots</description>
        <errorConditionFormula>AND(
   ($RecordType.Name = &apos;IOTA Opportunity&apos;),
   (
      ISPICKVAL(StageName,&apos;Closed Lost&apos;) &amp;&amp; 
      ISPICKVAL(Reason__c,&quot;&quot;) 
   )
)</errorConditionFormula>
        <errorMessage>A reason must be chosen when an opportunity is set to Closed Lost</errorMessage>
    </validationRules>
</CustomObject>